{
    "@@locale": "en",
    "accept": "Accept",
    "total": "Total",
    "value": "Value",
    "unit_abbreviated": "U.",
    "no_city_set": "No city set",
    "no_invoices": "No invoices",
    "backup_database": "Backup database",
    "delete_invoice_product": "Delete invoice product",
    "details": "Details",
    "quantity": "Quantity",
    "remaining_unpaid_balance": "Remaining unpaid balance",
    "search": "Search",
    "search_customer": "Search customer",
    "search_product": "Search product",
    "invoice_created": "Invoice created",
    "print_invoice": "Print invoice",
    "print": "Print",
    "upload_v2_database": "Upload V2 database",
    "cancel": "Cancel",
    "unit_price": "Unit price",
    "v2_database_loaded": "V2 database loaded",
    "no_products_found": "No products found",
    "no_customer_set": "No customer set",
    "create_customer": "Create customer",
    "create_invoice": "Create invoice",
    "invoice": "Invoice # {number}",
    "@invoice": {
        "placeholders": {
            "number": {
                "type": "int",
                "format": "decimalPattern"
            }
        }
    },
    "nit_document": "NIT: {document}, simple regime",
    "@nit_document": {
        "placeholders": {
            "document": {
                "type": "String"
            }
        }
    },
    "photos": "Photos",
    "printer": "Printer",
    "business_name": "Business name",
    "unknown_exception": "Unknown exception!\nCall the police",
    "city": "City",
    "invoice_drafts": "Invoice drafts",
    "no_invoice_drafts_found": "No invoice drafts found",
    "address": "Address",
    "company_name": "Company name",
    "company_document": "Company document",
    "company_email": "Company email",
    "company_phone": "Company phone",
    "edit_company_info": "Edit company info",
    "phone_number": "Phone number",
    "add_customer": "Add customer",
    "add_product": "Add product",
    "company_info": "Company info",
    "number": "Number",
    "no_products": "No products",
    "no_customers": "No customers",
    "no_cities_found": "No cities found",
    "no_invoices_found": "No invoices found",
    "close": "Close",
    "coming_soon": "Coming soon",
    "customers": "Customers",
    "default_price": "Default price",
    "purchase_price": "Purchase price",
    "delete_product": "Delete product?",
    "err_bluetooth_disabled": "Bluetooth disabled.",
    "err_blank_value": "The value can't be blank",
    "err_invalid_decimal_value": "The value must be decimal",
    "err_value_too_big": "The value is too big",
    "err_invalid_integer_value": "The value must be an integer",
    "err_invalid_value": "The value is invalid",
    "err_negative_value": "The value can't be negative",
    "err_not_enough_stock": "Not enough stock available",
    "err_product_name_taken": "This name is already taken",
    "err_value_required": "A value is required",
    "invoices": "Invoices",
    "customer": "Customer",
    "current_product_stock": "Current product stock: {stock}",
    "@current_product_stock": {
      "placeholders": {
        "stock": {
          "type": "int",
          "format": "decimalPattern"
        }
      }
    },
    "date": "Date",
    "no_customers_found": "No customers found",
    "edit_product": "Edit product",
    "name": "Name",
    "product": "Product",
    "product_created": "Product created",
    "customer_created": "Customer created",
    "product_edited": "Product edited",
    "product_deleted": "Product deleted",
    "customer_deleted": "Customer deleted",
    "no_invoice_products": "No invoice products",
    "products": "Products",
    "no_date_selected": "No date selected",
    "save": "Save",
    "settings": "Settings",
    "stock": "Stock",
    "this_action_cannot_be_undone": "This action can't be undone."
}
